--- a/app/components/home/homeView.html
+++ b/app/components/home/homeView.html
@@ -1,5 +1,5 @@
 <div class="homeDirective">
-    <nav id="myNavbar" class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation">
+    <nav id="tictactoeNavbar" ng-class="{'navbar-shrink': navBarShrink}" class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="container">
             <div class="navbar-header">
