--- a/app/assets/css/tictactoe.css
+++ b/app/assets/css/tictactoe.css
@@ -1,7 +1,3 @@
-.tictactoe__board__section {
-    /*height: 80vh;*/
-}
-
 .tictactoe__board__div {
     text-align: center;
     height: 50vh;
@@ -73,6 +69,29 @@
     border: none;
 }
 
+@media (min-width: 980px) and (max-width: 1200px) {
+    .tictactoe__item {
+        height: 80px;
+        width: 80px;
+        border-radius: 0px;
+        background-color: #fff;
+        color: #E3701A;
+        border: none;
+    }
+    .tictactoe__item__X {
+        background-size: 30px 30px;
+    }
+    .tictactoe__item__O {
+        background-size: 30px 30px;
+    }
+}
+
+@media (max-width: 990px) {
+    .tictactoe__board__div {
+        margin-top: 30px;
+    }
+}
+
 .tictactoe__item:focus {
     outline: none;
 }
@@ -140,42 +159,45 @@
     border-right: dashed 1px;
 }
 
+
+/*Override Bootstrap styles*/
+
 .btn:focus {
     outline: none;
 }
 
-.navbar-default {
+.tictactoe__navbar.navbar-default {
     background-color: #222;
     border-color: transparent
 }
 
-.navbar-default .navbar-brand {
+.tictactoe__navbar.navbar-default .navbar-brand {
     color: #E3701A;
     font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive
 }
 
-.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus, .navbar-default .navbar-brand:active, .navbar-default .navbar-brand.active {
+.tictactoe__navbar.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus, .navbar-default .navbar-brand:active, .navbar-default .navbar-brand.active {
     color: #E3701A
 }
 
-.navbar-default .navbar-collapse {
+.tictactoe__navbar.navbar-default .navbar-collapse {
     border-color: rgba(255, 255, 255, .02)
 }
 
-.navbar-default .navbar-toggle {
+.tictactoe__navbar.navbar-default .navbar-toggle {
     background-color: #E3701A;
     border-color: #E3701A;
 }
 
-.navbar-default .navbar-toggle .icon-bar {
+.tictactoe__navbar.navbar-default .navbar-toggle .icon-bar {
     background-color: #fff
 }
 
-.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+.tictactoe__navbar.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
     background-color: #E3701A
 }
 
-.navbar-default .nav li a {
+.tictactoe__navbar.navbar-default .nav li a {
     font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-transform: uppercase;
     font-weight: 400;
@@ -183,28 +205,28 @@
     color: #fff
 }
 
-.navbar-default .nav li a:hover, .navbar-default .nav li a:focus {
+.tictactoe__navbar.navbar-default .nav li a:hover, .tictactoe__navbar.navbar-default .nav li a:focus {
     color: #E3701A;
     outline: 0
 }
 
-.navbar-default .navbar-nav>.active>a {
+.tictactoe__navbar.navbar-default .navbar-nav>.active>a {
     border-radius: 0;
     color: #fff;
     background-color: #E3701A
 }
 
-.navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
+.tictactoe__navbar.navbar-default .navbar-nav>.active>a:hover, .tictactoe__navbar.navbar-default .navbar-nav>.active>a:focus {
     color: #fff;
     background-color: #E3701A
 }
 
 @media (min-width:768px) {
-    .navbar-nav {
+    .tictactoe__navbar .navbar-nav {
         float: right;
         margin: 0;
     }
-    .navbar-default {
+    .tictactoe__navbar.navbar-default {
         background-color: transparent;
         padding: 25px 0;
         -webkit-transition: padding .3s;
@@ -212,47 +234,36 @@
         transition: padding .3s;
         border: 0
     }
-    .navbar-default .navbar-brand {
+    .tictactoe__navbar.navbar-default .navbar-brand {
         font-size: 2em;
         -webkit-transition: all .3s;
         -moz-transition: all .3s;
         transition: all .3s
     }
-    .navbar-default .navbar-nav>.active>a {
+    .tictactoe__navbar.navbar-default .navbar-nav>.active>a {
         border-radius: 3px
     }
-    .navbar-default.navbar-shrink {
+    .tictactoe__navbar.navbar-default.navbar-shrink {
         background-color: #222;
         padding: 10px 0
     }
-    .navbar-default.navbar-shrink .navbar-brand {
+    .tictactoe__navbar.navbar-default.navbar-shrink .navbar-brand {
         font-size: 1.5em
     }
 }
 
-.navbar-default.navbar-shrink {
+.tictactoe__navbar.navbar-default.navbar-shrink {
     background-color: #222;
     padding: 10px 0
 }
 
-.navbar-default.navbar-shrink .navbar-brand {
+.tictactoe__navbar.navbar-default.navbar-shrink .navbar-brand {
     font-size: 1.5em
 }
 
 
 }
-header {
-    background-image: url(../img/header-bg.jpg);
-    background-repeat: none;
-    background-attachment: scroll;
-    background-position: center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-    text-align: center;
-    color: #fff
-}
+header {}
 header {
     background-image: url('../img/tictactoe.jpg');
     background-repeat: no-repeat;
@@ -328,8 +339,4 @@ section h3.section-subheading {
     section {
         padding: 100px 0px 0px 0px;
     }
-}
-.service-heading {
-    margin: 15px 0;
-    text-transform: none
 }
